force-app/main/default/objects/Tarifas__c/Tarifas__c.object-meta.xml
<CustomObject>
    <label>Tarifas</label>
    <nameField>
        <displayFormat>Tarifa-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tarifas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>