force-app/main/default/objects/Tarifas__c/fields/Contrato__c.field-meta.xml
<CustomField>
    <fullName>Contrato__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contrato</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Tarifas</relationshipLabel>
    <relationshipName>Tarifas</relationshipName>
    <type>Lookup</type>
</CustomField>