force-app/main/default/objects/Tarifas__c/fields/DataTarifa__c.field-meta.xml
<CustomField>
    <fullName>DataTarifa__c</fullName>
    <label>Data da tarifa</label>
    <type>Date</type>
</CustomField>