force-app/main/default/objects/Tarifas__c/fields/DataVoo__c.field-meta.xml
<CustomField>
    <fullName>DataVoo__c</fullName>
    <formula>Trecho__r.Voo__r.DataVoo__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Data do voo</label>
    <type>Date</type>
</CustomField>