force-app/main/default/objects/Tarifas__c/fields/IdExternoSigTrip__c.field-meta.xml
<CustomField>
    <fullName>IdExternoSigTrip__c</fullName>
    <externalId>true</externalId>
    <label>Id Externo Sig Trip</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>