force-app/main/default/objects/Tarifas__c/fields/Isento__c.field-meta.xml
<CustomField>
    <fullName>Isento__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Isento</label>
    <type>Checkbox</type>
</CustomField>