force-app/main/default/objects/Tarifas__c/fields/Moeda__c.field-meta.xml
<CustomField>
    <fullName>Moeda__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Moeda</label>
    <referenceTo>Moeda__c</referenceTo>
    <relationshipLabel>Tarifas</relationshipLabel>
    <relationshipName>Tarifas</relationshipName>
    <type>Lookup</type>
</CustomField>