force-app/main/default/objects/Tarifas__c/fields/ReciboAnexo__c.field-meta.xml
<CustomField>
    <fullName>ReciboAnexo__c</fullName>
    <label>Recibo - Anexo</label>
    <type>Url</type>
</CustomField>