force-app/main/default/objects/Tarifas__c/fields/Tarifa__c.field-meta.xml
<CustomField>
    <fullName>Tarifa__c</fullName>
    <label>Tarifa</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>landing</fullName>
                <label>Tarifa de Pouso (TPO)</label>
            </value>
            <value>
                <fullName>maneuvering_area</fullName>
                <label>Tarifa de Permanência no Pátio de Manobras (PPM)</label>
            </value>
            <value>
                <fullName>aircraft_stand</fullName>
                <label>Tarifa de Permanência na Área de Estadia (PPE)</label>
            </value>
            <value>
                <fullName>route_navigation</fullName>
                <label>Tarifa de Uso das Comunicações e dos Auxílios à Navegação Aérea em Rota (PAN)</label>
            </value>
            <value>
                <fullName>airport_control</fullName>
                <label>Tarifa de Uso das Comunicações e dos Auxílios-Rádio à Navegação Aérea em Área de Controle de Aeródromo (TAT ADR)</label>
            </value>
            <value>
                <fullName>approach_control</fullName>
                <label>Tarifa de Uso das Comunicações e dos Auxílios-Rádio à Navegação Aérea em Área de Controle de Aproximação (TAT APP)</label>
            </value>
            <value>
                <fullName>Landing Fees</fullName>
            </value>
            <value>
                <fullName>Passenger Departure Fees Adults</fullName>
            </value>
            <value>
                <fullName>Cargo Charges</fullName>
            </value>
            <value>
                <fullName>Electricity charge</fullName>
            </value>
            <value>
                <fullName>AW139 Off shore charges</fullName>
            </value>
            <value>
                <fullName>S92 Off shore charges</fullName>
            </value>
            <value>
                <fullName>AW139 Air Navigation Fees</fullName>
            </value>
            <value>
                <fullName>S92 Air Navigation Fees</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>