force-app/main/default/objects/Tarifas__c/fields/TipoProvedor__c.field-meta.xml
<CustomField>
    <fullName>TipoProvedor__c</fullName>
    <label>Tipo de provedor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>airspace_responsible</fullName>
                <label>Responsável pelo espaço aéreo</label>
            </value>
            <value>
                <fullName>airport_operator</fullName>
                <label>Operador de aeroporto</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>