force-app/main/default/objects/Tarifas__c/fields/UnidadeMedida__c.field-meta.xml
<CustomField>
    <fullName>UnidadeMedida__c</fullName>
    <formula>&apos;UN&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unidade de Medida</label>
    <type>Text</type>
</CustomField>